bug fixed - requests before init

--- a/tests.html
+++ b/tests.html
@@ -5,16 +5,15 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.3/jasmine-html.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.3/boot.min.js"></script>
 		<script type="text/javascript" src="./node_modules/angular/angular.js"></script>
-		<script type="text/javascript" src="./http.polyfill.module.js"></script>
-		<script type="text/javascript" src="./http.polyfill.builder.request.js"></script>
-		<script type="text/javascript" src="./http.polyfill.manager.iframe.js"></script>
-		<script type="text/javascript" src="./http.polyfill.js"></script>
-		<!--script type="text/javascript" src="./tests/http.polyfill.manager.iframe.tests.js"></script-->
-		<script type="text/javascript" src="./tests/http.polyfill.tests.js"></script>
+		<script type="text/javascript" src="./cdr.module.js"></script>
+		<script type="text/javascript" src="./cdr.builder.request.js"></script>
+		<script type="text/javascript" src="./cdr.manager.iframe.js"></script>
+		<script type="text/javascript" src="./cdr.service.js"></script>
+		<script type="text/javascript" src="./tests/cdr.service.tests.js"></script>
 	</head>
 	<body>
 	</body>
-	<script type="text/javascript" data-ng-app="http.polyfill">
+	<script type="text/javascript" data-ng-app="cdr">
 		window.http_polyfill_debug = false;
 
 	</script>
